<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/labelDolares"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/d_laress"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/campoDolares"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelDolares" />


    <TextView
        android:id="@+id/labelEuros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/euross"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/campoDolares"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/campoEuros"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelEuros" />


    <RadioGroup
        android:id="@+id/grupoOpciones"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="start"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/campoEuros"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/radioEurosADolares"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/euros_a_d_laress"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioDolaresAEuros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d_lares_a_euross"
            android:layout_marginTop="8dp" />
    </RadioGroup>


    <TextView
        android:id="@+id/labelResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cambio_aa"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/grupoOpciones"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/campoResultado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:background="#E0E0E0"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/labelResultado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/botonConvertir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/convertirr"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/campoResultado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
